--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,7 @@
     <title>Overview...</title>
   </head>
   <body>
-    <div id="root">
-
-    </div>
+    <div id="root"></div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
