--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Overview...</title>
   </head>
-  <body>
+  <body style="margin:0">
     <div id="root"></div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
