--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   </head>
   <body style="margin:0">
     <div id="root"></div>
+    <div id="portal"></div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
