--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,11 @@
   display: block;
   transition: opacity .2s;
 }
+
+.socialBtn {
+    font-size: 35px;
+    margin-right: 20px;
+}
  </style>
   </head>
   <body style="margin:0">
